@@ -709,6 +709,13 @@ amp</source>
     </message>
 </context>
 <context>
+    <name>FormatContext</name>
+    <message>
+        <source>Track</source>
+        <translation>音轨</translation>
+    </message>
+</context>
+<context>
     <name>GME</name>
     <message>
         <source>System</source>
@@ -724,7 +731,7 @@ amp</source>
     </message>
     <message>
         <source>Track</source>
-        <translation type="unfinished">音轨</translation>
+        <translation>音轨</translation>
     </message>
     <message>
         <source>Voices</source>
