@@ -11,6 +11,7 @@ Changes in QMPlay2 build 16.07.16:
 	- fix bug in tag editor (non-Windows OS'es),
 	- updated Russian translation (victorr2007),
 	- fix downloading cover art from Last FM,
+	- properly handle chained OGG streams,
 	- move OpenGL2 shaders to resources,
 	- handle multimedia keys on Windows,
 	- add sharpness shader to OpenGL2,
